# django-project

./: pyproject.toml  render.yaml
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_initial.py  0003_alter_board_author_alter_comment_article_and_more.py  0004_board_view.py  0005_rename_view_board_views.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
photos/: models.py  serializers.py  urls.py  views.py
photos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_sale.py
sales/: admin.py  models.py  serializers.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_initial.py  0003_alter_answer_author_alter_answer_post_and_more.py  0004_question_ask_comment_delete_answer.py  0005_remove_question_ask_comment_question_parent.py  0006_question_is_parent.py  0007_alter_question_is_parent.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_gender.py  0003_alter_user_email.py
